update document feature
