# docs/swagger.json
@@ -554,22 +554,28 @@
         },
         "/v1/doctypes": {
             "get": {
-                "security": [
+                "parameters": [
                     {
-                        "BearerAuth": []
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "description": "Items per page",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Search by type name",
+                        "name": "search",
+                        "in": "query"
                     }
                 ],
-                "description": "Get list of all document types",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "DocTypes"
-                ],
-                "summary": "Get all document types",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -582,10 +588,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/e-document-backend_internal_domain.DocTypeResponse"
-                                            }
+                                            "$ref": "#/definitions/e-document-backend_internal_util.PaginatedData"
                                         }
                                     }
                                 }
@@ -594,6 +597,12 @@
                     },
                     "401": {
                         "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/e-document-backend_internal_util.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/e-document-backend_internal_util.Response"
                         }
@@ -676,7 +685,7 @@
                 "summary": "Get document type by ID",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "DocType ID",
                         "name": "id",
                         "in": "path",
@@ -700,6 +709,12 @@
                                     }
                                 }
                             ]
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/e-document-backend_internal_util.Response"
                         }
                     },
                     "404": {
@@ -729,7 +744,7 @@
                 "summary": "Update document type",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "DocType ID",
                         "name": "id",
                         "in": "path",
@@ -770,6 +785,12 @@
                             "$ref": "#/definitions/e-document-backend_internal_util.Response"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/e-document-backend_internal_util.Response"
+                        }
+                    },
                     "404": {
                         "description": "Not Found",
                         "schema": {
@@ -797,7 +818,7 @@
                 "summary": "Delete document type",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "DocType ID",
                         "name": "id",
                         "in": "path",
@@ -807,6 +828,12 @@
                 "responses": {
                     "200": {
                         "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/e-document-backend_internal_util.Response"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/e-document-backend_internal_util.Response"
                         }
@@ -822,22 +849,28 @@
         },
         "/v1/documents": {
             "get": {
-                "security": [
+                "parameters": [
                     {
-                        "BearerAuth": []
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "description": "Items per page",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Search by document name",
+                        "name": "search",
+                        "in": "query"
                     }
                 ],
-                "description": "Get all documents for the authenticated user",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "documents"
-                ],
-                "summary": "Get all documents",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -850,10 +883,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/e-document-backend_internal_domain.DocumentResponse"
-                                            }
+                                            "$ref": "#/definitions/e-document-backend_internal_util.PaginatedData"
                                         }
                                     }
                                 }
@@ -956,7 +986,7 @@
                 "summary": "Get documents by folder",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "Folder ID",
                         "name": "folderId",
                         "in": "path",
@@ -1020,7 +1050,7 @@
                 "summary": "Get document by ID",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "Document ID",
                         "name": "id",
                         "in": "path",
@@ -1079,7 +1109,7 @@
                 "summary": "Update document",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "Document ID",
                         "name": "id",
                         "in": "path",
@@ -1153,7 +1183,7 @@
                 "summary": "Delete document",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "Document ID",
                         "name": "id",
                         "in": "path",
@@ -1202,7 +1232,7 @@
                 "summary": "Send document",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "Document ID",
                         "name": "id",
                         "in": "path",
@@ -1266,7 +1296,7 @@
                 "summary": "Get document versions",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "Document ID",
                         "name": "id",
                         "in": "path",
@@ -1382,16 +1412,28 @@
         },
         "/v1/folders": {
             "get": {
-                "security": [
+                "parameters": [
                     {
-                        "BearerAuth": []
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "description": "Items per page",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Search by folder name",
+                        "name": "search",
+                        "in": "query"
                     }
                 ],
-                "description": "Get all folders",
-                "tags": [
-                    "folders"
-                ],
-                "summary": "Get all folders",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -1404,14 +1446,23 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/e-document-backend_internal_domain.FolderResponse"
-                                            }
+                                            "$ref": "#/definitions/e-document-backend_internal_util.PaginatedData"
                                         }
                                     }
                                 }
                             ]
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/e-document-backend_internal_util.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/e-document-backend_internal_util.Response"
                         }
                     }
                 }
@@ -1472,7 +1523,7 @@
                 "summary": "Get folder by ID",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "Folder ID",
                         "name": "id",
                         "in": "path",
@@ -1497,6 +1548,18 @@
                                 }
                             ]
                         }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/e-document-backend_internal_util.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/e-document-backend_internal_util.Response"
+                        }
                     }
                 }
             },
@@ -1512,7 +1575,7 @@
                 "summary": "Update folder",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "Folder ID",
                         "name": "id",
                         "in": "path",
@@ -1546,6 +1609,18 @@
                                 }
                             ]
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/e-document-backend_internal_util.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/e-document-backend_internal_util.Response"
+                        }
                     }
                 }
             },
@@ -1561,7 +1636,7 @@
                 "summary": "Delete folder",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "Folder ID",
                         "name": "id",
                         "in": "path",
@@ -1571,6 +1646,18 @@
                 "responses": {
                     "200": {
                         "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/e-document-backend_internal_util.Response"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/e-document-backend_internal_util.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/e-document-backend_internal_util.Response"
                         }
@@ -3197,13 +3284,13 @@
                     {
                         "type": "string",
                         "description": "First name",
-                        "name": "first_name",
+                        "name": "firstname",
                         "in": "formData"
                     },
                     {
                         "type": "string",
                         "description": "Last name",
-                        "name": "last_name",
+                        "name": "lastname",
                         "in": "formData"
                     },
                     {
@@ -3396,13 +3483,13 @@
                     {
                         "type": "string",
                         "description": "First name",
-                        "name": "first_name",
+                        "name": "firstname",
                         "in": "formData"
                     },
                     {
                         "type": "string",
                         "description": "Last name",
-                        "name": "last_name",
+                        "name": "lastname",
                         "in": "formData"
                     },
                     {
